midpoint-live-demo/kustomize-base/kubernetes-objects/mailpit/mailpit.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mailpit
  template:
    metadata:
      labels:
        app: mailpit
    spec:
      volumes:
        - name: mailpit-data
          emptyDir: {}
      containers:
        - name: mailpit
          image: axllent/mailpit:v1.24.0
          ports:
            - name: smtp
              containerPort: 1025
              protocol: TCP
            - name: http
              containerPort: 8025
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: mailpit-data
              mountPath: /data
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  serviceName: mailpit-service
  revisionHistoryLimit: 10
