midpoint-live-demo/kustomize-base/kubernetes-objects/mailpit/mailpit-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mailpit-service
spec:
  ports:
    - name: smtp
      protocol: TCP
      port: 1025
      targetPort: smtp
    - name: http
      protocol: TCP
      port: 8025
      targetPort: http
  selector:
    app: mailpit
  type: ClusterIP
  sessionAffinity: None
