midpoint-live-demo/kustomize-base/kubernetes-objects/mailpit/mailpit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailpit-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo.example.com
      secretName: cert-mp-demo
  rules:
    - host: demo.example.com
      http:
        paths:
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: mailpit-service
                port:
                  number: 8025
